--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
+  display:  flex;
+  flex-direction: row-reverse;
   text-align: center;
+  background-color: #282c34;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -8,13 +11,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Results {
+  display:  flex;
+  align-self:  center;
 }
