WIP: adding the translation API call

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -4,11 +4,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.Form__textarea {
-  resize:  none;
+.Form__textfield {
+  width:  500px;
 }
